Revision history for {{$dist->name}}

{{$NEXT}}

	Converted to Dist::Zilla for the release process

* 0.01

	initial release