@@ -1,6 +1,2 @@
-name			= Pod-Spell-CommonMistakes
-author			= Apocalypse <APOCAL@cpan.org>
-license			= Perl_5
-copyright_holder	= Apocalypse
-
+name = Pod-Spell-CommonMistakes
 [@Apocalyptic]
