@@ -6,11 +6,6 @@ package Pod::Spell::CommonMistakes::WordList;
 use base qw( Exporter );
 our @EXPORT = qw( _check_case _check_common );
 
-# This is a simple data module
-# The data is taken from Lintian in the Debian git repo, thanks!
-# http://wiki.debian.org/Teams/Lintian
-# git://git.debian.org/git/lintian/lintian.git
-
 # TODO Figure out an autoimporter?
 # apoc@blackhole:~/othergit/lintian/data/spelling$ cat corrections-case | perl -e 'while ( <STDIN> ) { next if $_ =~ /^#/; if ( $_ =~ /^(.+)\|\|(.+)$/ ) { print " \"$1\" => \"$2\",\n" } }'
 
@@ -35,6 +30,8 @@ my %case = (
  "debian" => "Debian",
  "Debian-Edu" => "Debian Edu",
  "debian-edu" => "Debian Edu",
+ "Docbook" => "DocBook",
+ "docbook" => "DocBook",
  "english" => "English",
  "french" => "French",
  "EMacs" => "Emacs",
@@ -65,6 +62,7 @@ my %case = (
  "linux" => "Linux",
  "Latex" => "LaTeX",
  "latex" => "LaTeX",
+ "oAuth" => "OAuth",
  "OCAML" => "OCaml",
  "Ocaml" => "OCaml",
  "ocaml" => "OCaml",
@@ -146,6 +144,8 @@ my %common = (
  "abov" => "above",
  "absense" => "absence",
  "absolut" => "absolute",
+ "absoulte" => "absolute",
+ "acceleratoin" => "acceleration",
  "accelleration" => "acceleration",
  "accesing" => "accessing",
  "accesnt" => "accent",
@@ -157,10 +157,18 @@ my %common = (
  "accout" => "account",
  "acess" => "access",
  "acessable" => "accessible",
+ "ackowledge" => "acknowledge",
+ "ackowledged" => "acknowledged",
+ "acknowldegement" => "acknowldegement",
  "acording" => "according",
+ "activete" => "activate",
  "acumulating" => "accumulating",
  "addional" => "additional",
  "additionaly" => "additionally",
+ "addreses" => "addresses",
+ "aditional" => "additional",
+ "aditionally" => "additionally",
+ "aditionaly" => "additionally",
  "adress" => "address",
  "adresses" => "addresses",
  "adviced" => "advised",
@@ -169,9 +177,13 @@ my %common = (
  "alegorical" => "allegorical",
  "algorith" => "algorithm",
  "algorithmical" => "algorithmically",
+ "algoritm" => "algorithm",
  "algoritms" => "algorithms",
+ "algorrithm" => "algorithm",
+ "algorritm" => "algorithm",
  "allpication" => "application",
  "alot" => "a lot",
+ "alow" => "allow",
  "alows" => "allows",
  "altough" => "although",
  "ambigious" => "ambiguous",
@@ -179,6 +191,7 @@ my %common = (
  "amout" => "amount",
  "analysator" => "analyzer",
  "ang" => "and",
+ "anniversery" => "anniversary",
  "annoucement" => "announcement",
  "anomolies" => "anomalies",
  "anomoly" => "anomaly",
@@ -223,6 +236,7 @@ my %common = (
  "avaliable" => "available",
  "backgroud" => "background",
  "bahavior" => "behavior",
+ "baloon" => "balloon",
  "baloons" => "balloons",
  "batery" => "battery",
  "becomming" => "becoming",
@@ -233,13 +247,17 @@ my %common = (
  "capabilites" => "capabilities",
  "capatibilities" => "capabilities",
  "cariage" => "carriage",
+ "challange" => "challenge",
  "challanges" => "challenges",
  "changable" => "changeable",
+ "charachter" => "character",
  "charachters" => "characters",
  "charcter" => "character",
  "childs" => "children",
+ "chnage" => "change",
  "chnages" => "changes",
  "choosen" => "chosen",
+ "collapsable" => "collapsible",
  "colorfull" => "colorful",
  "comand" => "command",
  "comit" => "commit",
@@ -255,11 +273,15 @@ my %common = (
  "compatibiliy" => "compatibility",
  "compatibilty" => "compatibility",
  "compleatly" => "completely",
+ "completly" => "completely",
  "complient" => "compliant",
  "compres" => "compress",
  "compresion" => "compression",
  "configuratoin" => "configuration",
+ "conjuction" => "conjunction",
  "connectinos" => "connections",
+ "connnection" => "connection",
+ "connnections" => "connections",
  "consistancy" => "consistency",
  "containes" => "contains",
  "containts" => "contains",
@@ -272,8 +294,10 @@ my %common = (
  "corected" => "corrected",
  "correponding" => "corresponding",
  "correponds" => "corresponds",
+ "correspoding" => "corresponding",
  "cryptocraphic" => "cryptographic",
  "curently" => "currently",
+ "dafault" => "default",
  "deafult" => "default",
  "deamon" => "daemon",
  "debain" => "Debian",
@@ -285,9 +309,12 @@ my %common = (
  "dependancies" => "dependencies",
  "dependancy" => "dependency",
  "dependant" => "dependent",
+ "desactivate" => "deactivate",
  "detabase" => "database",
  "developement" => "development",
  "developped" => "developed",
+ "developpement" => "development",
+ "developper" => "developer",
  "deveolpment" => "development",
  "devided" => "divided",
  "dictionnary" => "dictionary",
@@ -324,6 +351,7 @@ my %common = (
  "exceded" => "exceeded",
  "excellant" => "excellent",
  "exlcude" => "exclude",
+ "exlcusive" => "exclusive",
  "expecially" => "especially",
  "explicitely" => "explicitly",
  "expresion" => "expression",
@@ -332,6 +360,9 @@ my %common = (
  "failuer" => "failure",
  "familar" => "familiar",
  "fatser" => "faster",
+ "feauture" => "feature",
+ "feautures" => "features",
+ "fetaure" => "feature",
  "fetaures" => "features",
  "forse" => "force",
  "fortan" => "fortran",
@@ -396,12 +427,15 @@ my %common = (
  "maintainance" => "maintenance",
  "maintainence" => "maintenance",
  "makeing" => "making",
+ "malplace" => "misplace",
+ "malplaced" => "misplaced",
  "managable" => "manageable",
  "manoeuvering" => "maneuvering",
  "mathimatical" => "mathematical",
  "mathimatic" => "mathematic",
  "mathimatics" => "mathematics",
  "ment" => "meant",
+ "messsage" => "message",
  "messsages" => "messages",
  "microprocesspr" => "microprocessor",
  "milliseonds" => "milliseconds",
@@ -432,10 +466,12 @@ my %common = (
  "o'caml" => "OCaml",
  "omitt" => "omit",
  "ommitted" => "omitted",
+ "onself" => "oneself",
  "optionnal" => "optional",
  "optmizations" => "optimizations",
  "orientatied" => "orientated",
  "orientied" => "oriented",
+ "ouput" => "output",
  "overaall" => "overall",
  "overriden" => "overridden",
  "pacakge" => "package",
@@ -495,6 +531,9 @@ my %common = (
  "protocoll" => "protocol",
  "psychadelic" => "psychedelic",
  "quering" => "querying",
+ "reasearch" => "research",
+ "reasearcher" => "researcher",
+ "reasearchers" => "researchers",
  "recieved" => "received",
  "recieve" => "receive",
  "reciever" => "receiver",
@@ -514,12 +553,14 @@ my %common = (
  "removeable" => "removable",
  "repectively" => "respectively",
  "replacments" => "replacements",
+ "replys" => "replies",
  "requiere" => "require",
  "requred" => "required",
  "resizeable" => "resizable",
  "ressize" => "resize",
  "ressource" => "resource",
  "retransmited" => "retransmitted",
+ "runned" => "ran",
  "runnning" => "running",
  "safly" => "safely",
  "savable" => "saveable",
@@ -546,6 +587,7 @@ my %common = (
  "speling" => "spelling",
  "splitted" => "split",
  "staically" => "statically",
+ "standardss" => "standards",
  "standart" => "standard",
  "staticly" => "statically",
  "subdirectoires" => "subdirectories",
@@ -562,6 +604,7 @@ my %common = (
  "suppoted" => "supported",
  "suppported" => "supported",
  "suppport" => "support",
+ "surpresses" => "suppresses",
  "suspicously" => "suspiciously",
  "synax" => "syntax",
  "synchonized" => "synchronized",
@@ -598,6 +641,7 @@ my %common = (
  "verison" => "version",
  "verson" => "version",
  "vicefersa" => "vice-versa",
+ "visiters" => "visitors",
  "vitual" => "virtual",
  "whataver" => "whatever",
  "wheter" => "whether",
@@ -605,6 +649,23 @@ my %common = (
  "xwindows" => "X",
  "yur" => "your",
 );
+
+# extra words contributed by CPAN users, thanks!
+# split it up for easier maintenance of Lintian data
+my %common_cpan = (
+ "refering" => "referring",
+ "writeable" => "writable",
+ "nineth" => "ninth",
+ "ommited" => "omitted",
+ "omited" => "omitted",
+ "requrie" => "require",
+ "existant" => "existent",
+ "explict" => "explicit",
+ "agument" => "augument",
+ "destionation" => "destination",
+);
+
+%common = ( %common, %common_cpan );
 
 sub _check_common {
 	my $words = shift;
@@ -632,7 +693,9 @@ sub _check_common {
 
 1;
 
-=for stopwords wordlist Lintian
+=pod
+
+=for stopwords wordlist Lintian git repo
 
 =head1 SYNOPSIS
 
@@ -640,13 +703,13 @@ sub _check_common {
 
 =head1 DESCRIPTION
 
-Holds the wordlist used in L<Pod::Spell::CommonMistakes>. The data is taken from L<http://wiki.debian.org/Teams/Lintian>, thanks!
+Holds the wordlist used in L<Pod::Spell::CommonMistakes>. Big thanks goes out to the Debian Lintian team for the wordlist!
 
-	# Data taken from:
-	# lintian/data/spellings/corrections
-	# lintian/data/spellings/corrections-case
+	# Data taken from: http://wiki.debian.org/Teams/Lintian ( git://git.debian.org/git/lintian/lintian.git )
+	# lintian/data/spelling/corrections
+	# lintian/data/spelling/corrections-case
 
-	# Data was synced on Wed Apr  7 13:33:46 MST 2010
-	# The git repo was on 0fbfb39a4510a3e80685ce6201810b7b06f1b78e
+	# Data was synced on Mon Feb 21 15:52:12 2011
+	# The git HEAD was 3afe583b84d4c75bb96f980bb02e6ca0c8e31e68
 
 =cut
