@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
 
 	Converted to Dist::Zilla for the release process
+	Add some more common misspellings, thanks RT#61505
 
 * 0.01
 
